--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
   </head>
   <body data-spy="scroll" data-target="#navigation" data-offset="120">
     <!-- intro-->
-    <section id="intro" style="background-image: url('img/ein-steig.jpg');" class="intro">
+    <section id="intro" style="background-image: url('img/water.jpg');" class="intro">
       <div class="overlay"></div>
       <div class="content">
         <div class="container clearfix">
           <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-12">
-              <p class="italic">Hi! Nice to meet you, I'm</p>
+              <p class="hello">Hi! Nice to meet you, I'm</p>
               <h1>Matthew Edge</h1>
-              <p class="italic">Full Stack Web Developer with a background in Hospitlality Management</p>
+              <p class="hello">Full Stack Web Developer with a background in Hospitlality Management</p>
             </div>
           </div>
         </div>
@@ -48,7 +48,7 @@
         <div role="navigation" class="navbar navbar-default">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"><img src="img/logo.png" alt=""></a>
+              <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></a>
             </div>
             <div id="navigation" class="collapse navbar-collapse navbar-right">
               <ul class="nav navbar-nav">
