--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <div class="col-md-6">
             <h2 class="heading">About me</h2>
             <p class="lead">This can be an about section.</p>
-            <p>Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody has she think equal. Estate moment he at on wonder at season little. Six garden result summer set family esteem nay estate. End admiration mrs unreserved discovered comparison especially invitation. </p>
-            <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+            <p>A passionate new developer transitioning from a career in Hospitality Management.  After exposure to building point of sale software in my previous roles, a strong ambition to move into the software development industry was born.</p>
+            <p> After successfully completing the Web Development Immersive course at General Assembly in Sydney, I feel strongly equipped to continue my journey and grow as a developer. I plan to consistently challenge myself with new technologies and ideas on a daily basis.</p>
           </div>
           <div class="col-md-5 col-md-offset-1">
             <p><img src="img/matthew.jpg" alt="" class="img-responsive img-circle"></p>
