--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="col-md-8 col-md-offset-2 col-sm-12">
               <p class="hello">Hi! Nice to meet you, I'm</p>
               <h1>Matthew Edge</h1>
-              <p class="hello">Full Stack Web Developer with a background in Hospitlality Management</p>
+              <p class="hello">Full Stack Web Developer with a background in Hospitality Management</p>
             </div>
           </div>
         </div>
@@ -54,10 +54,9 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#intro">Home</a></li>
                 <li><a href="#about">About </a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#text">Text</a></li>
-                <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -71,7 +70,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2 class="heading">About me</h2>
-            <p class="lead">This can be an about section.</p>
+            <p class="lead">A bit about me</p>
             <p>A passionate new developer transitioning from a career in Hospitality Management.  After exposure to building point of sale software in my previous roles, a strong ambition to move into the software development industry was born.</p>
             <p> After successfully completing the Web Development Immersive course at General Assembly in Sydney, I feel strongly equipped to continue my journey and grow as a developer. I plan to consistently challenge myself with new technologies and ideas on a daily basis.</p>
           </div>
@@ -83,11 +82,11 @@
     </section>
     <!-- about end-->
     <!-- Services-->
-    <section id="services" style="background-color: #eee">
+    <section id="skills" style="background-color: #eee">
       <div class="container">
         <div class="row services">
           <div class="col-md-12">
-            <h2 class="heading">Services</h2>
+            <h2 class="heading">Skills</h2>
             <div class="row">
               <div class="col-sm-4">
                 <div class="box">
@@ -169,68 +168,8 @@
         </div>
       </div>
     </section>
-    <!-- text page end-->
-    <!-- contact-->
-    <section id="contact" style="background-color: #fff;" class="text-page">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="heading">Contact</h2>
-            <div class="row">
-              <div class="col-md-6">
-                <form id="contact-form" method="post" action="#" class="contact-form">
-                  <div class="controls">
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <div class="form-group">
-                          <label for="name">Your firstname *</label>
-                          <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
-                        </div>
-                      </div>
-                      <div class="col-sm-6">
-                        <div class="form-group">
-                          <label for="surname">Your lastname *</label>
-                          <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="surname">Your email *</label>
-                      <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
-                    </div>
-                    <div class="form-group">
-                      <label for="surname">Your message for us *</label>
-                      <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                    </div>
-                    <div class="text-center">
-                      <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="col-md-6">
-                <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <div id="map"></div>
-    <footer style="background-color: #111;" class="section-inverse">
-      <div class="container">
-        <div class="row copyright">
-          <div class="col-md-6">
-            <p>&copy;2015 Your name/company goes here</p>
-          </div>
-          <div class="col-md-6">
-            <p class="credit">Template by <a href="https://bootstrapious.com/tutorials">Bootstrapious</a></p>
-            <!-- Please do not remove the backlink to us unless you support the development at https://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :) -->
-          </div>
-        </div>
-      </div>
+
+
     </footer>
     <!-- Javascript files-->
     <!-- jQuery-->
@@ -245,19 +184,9 @@
     <!-- Sticky + Scroll To scripts for navbar-->
     <script src="js/jquery.sticky.js"></script>
     <script src="js/jquery.scrollTo.min.js"></script>
-    <!-- google maps-->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;amp;sensor=false"></script>
-    <script src="js/gmaps.js"></script>
+
     <!-- main script-->
     <script src="js/front.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+
   </body>
 </html>
