capitals in img

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a href="#about">About </a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#text">Text</a></li>
+                <li><a href="#text">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -73,6 +73,7 @@
             <p class="lead">A bit about me</p>
             <p>A passionate new developer transitioning from a career in Hospitality Management.  After exposure to building point of sale software in my previous roles, a strong ambition to move into the software development industry was born.</p>
             <p> After successfully completing the Web Development Immersive course at General Assembly in Sydney, I feel strongly equipped to continue my journey and grow as a developer. I plan to consistently challenge myself with new technologies and ideas on a daily basis.</p>
+            <p> When I'm not coding, you can find me snowboarding somewhere in the world or practicing photography. Most of the time though I'll be spending time with my dog, maybe on a beach somewhere.
           </div>
           <div class="col-md-5 col-md-offset-1">
             <p><img src="img/matthew.jpg" alt="" class="img-responsive img-circle"></p>
@@ -90,23 +91,37 @@
             <div class="row">
               <div class="col-sm-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-desktop"></i></div>
-                  <h4>Webdesign</h4>
-                  <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                  <div class="icon"><i class="fa fa-laptop"></i></div>
+                  <ul>
+                    <li><h4>Javascript</h4></li>
+                    <li><h4>Ruby</h4></li>
+                    <li><h4>Rails</h4></li>
+                    <li><h4>HTML 5</h4></li>
+                  </ul>
+
+
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-print"></i></div>
-                  <h4>Print</h4>
-                  <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                  <div class="icon"><i class="fa fa-desktop"></i></div>
+                  <ul>
+                    <li><h4>CSS</h4></li>
+                    <li><h4>SASS</h4></li>
+                    <li><h4>PostGreSQL</h4></li>
+                    <li><h4>MySQL</h4></li>
+                  </ul>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="box">
                   <div class="icon"><i class="fa fa-globe"></i></div>
-                  <h4>SEO and SEM</h4>
-                  <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                  <ul>
+                    <li><h4>jQuery</h4></li>
+                    <li><h4>Github</h4></li>
+                    <li><h4>API Integration</h4></li>
+                    <li><h4>Client Service</h4></li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -124,23 +139,23 @@
             <div class="row">
               <div class="col-md-12 col-lg-8">
                 <h2 class="heading">Portfolio</h2>
-                <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                <p>The below are projects that I comleted during my course. Please note each project was completed within a 6 day timeframe. </p>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-6">
-                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 1" data-footer="Some footer information"><img src="img/nexus.png" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="img/nexus.png" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-6">
-                <div class="box"><a href="img/portfolio-2.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Some footer information"><img src="img/portfolio-2.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="https://mage-ga.herokuapp.com/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Some footer information"><img src="iMAGEg" alt="" class="img-responsive"></a></div>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-6">
-                <div class="box"><a href="img/portfolio-4.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-4.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="findio" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-6">
-                <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="itic tac toeg" alt="" class="img-responsive"></a></div>
               </div>
             </div>
           </div>
@@ -154,16 +169,41 @@
         <div class="row">
           <div class="col-md-12">
             <h2 class="heading">Text page</h2>
-            <div class="row">
-              <div class="col-sm-6">
-                <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
-              </div>
-              <div class="col-sm-6">
-                <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
-              </div>
+            <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+                <div class="intro-message">
+
+                    <ul class="list-inline intro-social-buttons">
+
+
+                        <li>
+                            <a href="https://twitter.com/mattyedge" target="_blank" class="btn btn-default btn-lg">
+                                <i class="fa fa-twitter fa-fw"></i>
+                                <span class="network-name">Twitter</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/matedge/nexus" target="_blank" class="btn btn-default btn-lg">
+                                <i class="fa fa-github fa-fw"></i>
+                                <span class="network-name">Github</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/matthew-edge-6b7310137/" target="_blank" class="btn btn-default btn-lg">
+                                <i class="fa fa-linkedin fa-fw"></i>
+                                <span class="network-name">Linkedin</span>
+                            </a>
+                        </li>
+
+
+                    </ul>
+                </div>
             </div>
+        </div>
+
+
+
           </div>
         </div>
       </div>
