imgur links added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p> When I'm not coding, you can find me snowboarding somewhere in the world or practicing photography. Most of the time though I'll be spending time with my dog, maybe on a beach somewhere.
           </div>
           <div class="col-md-5 col-md-offset-1">
-            <p><img src="img/matthew.jpg" alt="" class="img-responsive img-circle"></p>
+            <p><img src="http://i.imgur.com/hTnaW2j.jpg" alt="" class="img-responsive img-circle"></p>
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
             </div>
             <div class="row">
               <div class="col-sm-6">
-                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="img/nexus.png" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="ihttp://i.imgur.com/Dr4bNW1l.png" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-6">
                 <div class="box"><a href="https://mage-ga.herokuapp.com/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Some footer information"><img src="iMAGEg" alt="" class="img-responsive"></a></div>
