--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
             </div>
             <div class="row">
               <div class="col-sm-6">
-                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="ihttp://i.imgur.com/Dr4bNW1l.png" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="http://i.imgur.com/Dr4bNW1l.png" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-6">
-                <div class="box"><a href="https://mage-ga.herokuapp.com/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 2" data-footer="Some footer information"><img src="iMAGEg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="http://i.imgur.com/Dr4bNW1l.png" alt="" class="img-responsive"></a></div>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-6">
-                <div class="box"><a href="img/portfolio-4.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="findio" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="http://i.imgur.com/Dr4bNW1l.png" alt="" class="img-responsive"></a></div>
               </div>
               <div class="col-sm-6">
-                <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="itic tac toeg" alt="" class="img-responsive"></a></div>
+                <div class="box"><a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="http://i.imgur.com/Dr4bNW1l.png" alt="" class="img-responsive"></a></div>
               </div>
             </div>
           </div>
