proofread by Wyuen

--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
                           <div class="box">
                               <a href="https://nexus-images.herokuapp.com/" title="Nexus"><img src="http://i.imgur.com/Dr4bNW1l.png" alt="" class="img-responsive"></a>
                               <a href="https://github.com/matedge/Nexus" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-                              <p> Nexus was designed to make image sharing as easy as possible. User's upload images and then select desired images to form a gallery. This gallery link can be shared to anyone and will display a very minimal film roll on mobile devices utilizing the minimalist PhotoSwipe library. </p>
+                              <p> Nexus was designed to make image sharing as easy as possible. Users can upload images and then select desired images to form a gallery. This gallery link can be shared to anyone and will display a very minimal film roll on mobile devices utilizing the minimalist PhotoSwipe library. </p>
                           </div>
                         </div>
                         <div class="col-sm-6">
                           <div class="box">
                               <a href="http://findio-ga.herokuapp.com/" title="Nexus"><img src="http://i.imgur.com/W7ViHuWl.png" alt="" class="img-responsive"></a>
                               <a href="https://github.com/matedge/Findio" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-                              <p>FindIo is a location based app that uses current location of the user's device to determine proximity to certain "challenge points". Once a user is close enought to a challenge point, new content is displayed. This project
+                              <p>FindIo is a location based app that uses current location of the user's device to determine proximity to certain "challenge points". Once a user is close enough to a challenge point, new content is displayed. This project
                                   was built on rails with heavy integration of the Google Maps API.</p>
                           </div>
 
@@ -181,7 +181,7 @@
                             <div class="box">
                                 <a href="https://mage-ga.herokuapp.com/" title="Nexus"><img src="http://i.imgur.com/mHex9ydl.jpg" alt="" class="img-responsive"></a>
                                 <a href="https://github.com/matedge/Mage" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-                                <p> Mage was my first attempt at a full stack project. After a bried introduction to Rails, four days were spent developing the site and a lot was learnt. This project was also my first introduction to Bootstrap</p>
+                                <p> Mage was my first attempt at a full stack project. After a bried introduction to Rails, four days were spent developing the site and a lot was learnt. This project was also my first introduction to Bootstrap.</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
